[package]
name = "builder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arkworks-gadgets = { version = "^0.4.5", features = ["std", "r1cs"], default-features = true }
arkworks-circuits = { version = "^0.4.5", features = ["std", "r1cs"], default-features = false }
ark-serialize = "0.3.0"
arkworks-utils = { version = "^0.4.5", features = ["std", "r1cs"], default-features = false }
